// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OffRange /> should render correctly horizontal component 1`] = `
<ForwardRef(MotionComponent)
  style={
    Object {
      "background": "#E1E2E4",
      "borderRadius": 3,
      "height": undefined,
      "left": 0,
      "position": "absolute",
      "top": 0,
      "width": 100,
    }
  }
/>
`;

exports[`<OffRange /> should render correctly vertical component 1`] = `
<ForwardRef(MotionComponent)
  style={
    Object {
      "background": "#E1E2E4",
      "borderRadius": 3,
      "height": 100,
      "left": 0,
      "position": "absolute",
      "top": 0,
      "width": undefined,
    }
  }
/>
`;
